:recycle: fix requested changes
